--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "appwrite": "^13.0.1",
     "html-react-parser": "^5.0.11",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-redux": "^9.0.4",
